<resources>
    <string name="app_name">Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="welcome_to_tracker_app">Welcome To Tracker App!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_to_our_login_system">Welcome to our login System</string>
    <string name="username">Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="emailid">EmailId</string>
    <string name="phoneno">PhoneNo</string>
    <string name="submit">Submit</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="title_activity_user">User</string>
    <string name="google_maps_key">AIzaSyDCtg3IaoRqrb3vqIBCfNrwriWGq8FuHXI</string>
    <string name="title_activity_maps1">Map</string>
    <string name="Satellite">Satellite</string>
    <string name="Terrain">Terrain</string>
    <string name="Street">Street</string>

</resources>
